# razure

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/filesystem/: Cargo.toml
crates/generator/: Cargo.toml
crates/generator/src/: definitions.rs  generate.rs  lib.rs  parameters.rs  string_formatter.rs  terminal.rs
crates/parser/: Cargo.toml
crates/parser/src/: parser.rs
crates/parser/src/schema/: definition.rs  info.rs  mod.rs  operation.rs  parameter.rs  parameter_type.rs  path_item.rs  reference.rs  response.rs  swagger.rs
crates/parser/tests/: filesystem_integration_test.rs  parser_integration_test.rs
crates/razure/: Cargo.toml
crates/razure/src/: main.rs
src/: filesystem.rs  lib.rs  logger.rs  main.rs  models.rs
src/cli/: cli.rs
src/filesystem/: filesystem.rs  mod.rs
src/generator/: definitions.rs  generate.rs  mod.rs  parameters.rs  string_formatter.rs  terminal.rs
src/generator/generators/: mod.rs  types.rs
src/generator/generators/rust/: filesystem.rs  generator.rs  helpers.rs  mod.rs  string_formatter.rs  types.rs
src/generator/rust/: filesystem.rs  generator.rs  helpers.rs  mod.rs  string_formatter.rs  types.rs
src/parser/: mod.rs  models.rs  parser.rs
src/parser/schema/: contact.rs  definition.rs  definition_property.rs  external_documentation.rs  http_status.rs  info.rs  license.rs  method.rs  mod.rs  operation.rs  parameter.rs  parameter_type.rs  path_item.rs  reference.rs  response.rs  schema.rs  schema_format.rs  schema_object.rs  schema_type.rs  security_scheme.rs  swagger.rs  tag.rs
tests/: filesystem_integration_test.rs  parser_integration_test.rs  parser_test.rs
