[workspace]
members = [ "crates/cli","crates/filesystem", "crates/generator", "crates/parser"]
resolver = "2"

[workspace.dependencies]
rstest = "0.22.0"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
restriction = "warn"
warnings = "warn"

print_stdout = "allow"
print_stderr = "allow"
implicit_return = "allow"
single_call_fn = "allow"
