[package]
name = "razure"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
chrono = "0.4.38"
git2 = "0.19.0"
clap = "4.5.16"
thiserror = "1.0.63"
log4rs = "1.3.0"
log = "0.4.22"

[dev-dependencies]
rstest = "0.22.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
restriction = { level = "allow", priority = -1 }
warnings = { level = "warn", priority = -1 }
print_stdout = "allow"
print_stderr = "allow"
implicit_return = "allow"
single_call_fn = "allow"
arithmetic_side_effects = "allow"
unused_variables = "allow"
missing_docs_in_private_items = "allow"
